# legalNer4Serbian

./: README.md  debug_labels_cell.py  merge_annotations.py  quick_merge.py  test_mlm_data.py
ner/: BERT_CRF_FIXES_SUMMARY.md  EVALUATION_ALIGNMENT_FIX.md  GLiNER_EVALUATION_README.md  MODEL_COMPARISON_README.md  PER_CLASS_METRICS_EXPLANATION.md  README.md  SENTENCE_LEVEL_IMPROVEMENTS.md  UNREFACTORING_GUIDE.md  add_negative_examples.py  annotation_challenges_report.md  annotations_2.json  annotations_old.json  bert_crf_code_for_notebook.py  bert_crf_functions_to_add.py  bio_examples.json  class_weights_code_for_notebook.py  class_weights_functions_to_add.py  download_labelstudio_files.py  entity_labels_detailed_description.md  fix_ner_performance.py  gliner_zero_shot_evaluation.ipynb  improved_training_config.py  manual_annotations_complete.py  manual_annotations_complete_fixed.py  mlm_pretraining_code_for_notebook.py  notebook_filter_code.py  pyproject.toml  requirements.txt  run_gliner_evaluation.py  serbian_legal_ner_gliner_evaluation.ipynb  serbian_legal_ner_gliner_finetuning.ipynb  serbian_legal_ner_gliner_zero_shot.ipynb  serbian_legal_ner_gliner_zero_shot_evaluation.ipynb  serbian_legal_ner_pipeline.ipynb  serbian_legal_ner_pipeline_180_baseline_improvements.ipynb  serbian_legal_ner_pipeline_base.ipynb  serbian_legal_ner_pipeline_bert_crf.ipynb  serbian_legal_ner_pipeline_class_weights.ipynb  serbian_legal_ner_pipeline_dapt_mlm.ipynb  serbian_legal_ner_pipeline_dapt_mlm_1419.ipynb  (+10 more)
ner/few_shot_examples/: example_01_theft.txt  example_02_assault.txt  (+8 more)
(+1124 files in other folders)
