[project]
name = "legal-ner-serbian"
version = "0.1.0"
description = "Named Entity Recognition for Serbian legal documents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "spacy>=3.7.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
